--- a/backstage-checklist/package.json
+++ b/backstage-checklist/package.json
@@ -5,7 +5,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6"
+    "express": "^4.18.2"
   }
 }
+
